--- a/Basduvar.API/appsettings.json
+++ b/Basduvar.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConStr": "Data Source=DESKTOP-HLH6HUP\\SQLEXPRESS; Initial Catalog=BasduvarDb;Integrated Security=True; Connect Timeout=30; Encrypt=False; TrustServerCertificate=False; ApplicationIntent=ReadWrite; MultiSubneFailover=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
