--- a/Basduvar.API/Basduvar.API.csproj
+++ b/Basduvar.API/Basduvar.API.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Basduvar.Core\Basduvar.Core.csproj" />
     <ProjectReference Include="..\Basduvar.Data\Basduvar.Data.csproj" />
+    <ProjectReference Include="..\Basduvar.Service\Basduvar.Service.csproj" />
   </ItemGroup>
 
 
